--- a/.drone.yml
+++ b/.drone.yml
@@ -16,7 +16,8 @@ steps:
     image: ubuntu:latest
     commands:
     - apt-get -y update
-    - apt-get -y install --no-install-recommends ca-certificates nodejs yarn
+    - apt-get -y install --no-install-recommends ca-certificates nodejs npm
+    - npm install --global yarn
     - yarn install --frozen-lockfile
     - yarn build
     resources:
@@ -150,7 +151,8 @@ steps:
     image: ubuntu:latest
     commands:
     - apt-get -y update
-    - apt-get -y install --no-install-recommends ca-certificates nodejs yarn
+    - apt-get -y install --no-install-recommends ca-certificates nodejs npm
+    - npm install --global yarn
     - yarn install --frozen-lockfile
     - ./node_modules/.bin/playwright install
     - yarn build:mocked
