--- a/.drone.yml
+++ b/.drone.yml
@@ -13,12 +13,10 @@ trigger:
       - pull_request
 steps:
   - name: build
-    image: ubuntu:latest
+    image: node:16.16.0-slim
     commands:
-    - curl -fsSL https://deb.nodesource.com/setup_16.x | bash -
     - apt-get -y update
-    - apt-get -y install --no-install-recommends ca-certificates nodejs npm
-    - npm install --global yarn
+    - apt-get -y install --no-install-recommends ca-certificates
     - yarn install --frozen-lockfile
     - yarn build
     resources:
@@ -56,7 +54,7 @@ steps:
         from_secret: MONGODB_TV_API_KEY
       DEBIAN_FRONTEND: noninteractive
   - name: unit-tests
-    image: ubuntu:latest
+    image: node:16.16.0-slim
     commands:
     - npx jest
     resources:
@@ -94,9 +92,10 @@ steps:
         from_secret: MONGODB_TV_API_KEY
       DEBIAN_FRONTEND: noninteractive
   - name: lighthouse
-    image: ubuntu:latest
+    image: node:16.16.0-slim
     commands:
-    - ./node_modules/.bin/playwright install chrome # Easiest way to install Chrome.
+    - wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+    - apt-get -y install --no-install-recommends ./google-chrome-stable_current_amd64.deb
     - yarn global add @lhci/cli@0.8.x
     - lhci autorun
     resources:
@@ -149,14 +148,12 @@ trigger:
       - pull_request
 steps:
   - name: e2e-tests
-    image: ubuntu:latest
+    image: node:16.16.0-slim
     commands:
-    - curl -fsSL https://deb.nodesource.com/setup_16.x | bash -
+    - wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
     - apt-get -y update
-    - apt-get -y install --no-install-recommends ca-certificates nodejs npm
-    - npm install --global yarn
+    - apt-get -y install --no-install-recommends ca-certificates ./google-chrome-stable_current_amd64.deb
     - yarn install --frozen-lockfile
-    - ./node_modules/.bin/playwright install
     - yarn build:mocked
     - yarn test:e2e:visual
     resources:
