install wget again

--- a/.drone.yml
+++ b/.drone.yml
@@ -94,6 +94,7 @@ steps:
   - name: lighthouse
     image: node:16.16.0-slim
     commands:
+    - apt-get -y install --no-install-recommends wget
     - wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
     - apt-get -y install --no-install-recommends ./google-chrome-stable_current_amd64.deb
     - yarn global add @lhci/cli@0.8.x
