--- a/.drone.yml
+++ b/.drone.yml
@@ -59,6 +59,10 @@ steps:
   - name: unit-tests
     image: ubuntu:focal
     commands:
+    - apt-get -y update
+    - apt-get -y install --no-install-recommends ca-certificates curl
+    - curl -sL https://deb.nodesource.com/setup_16.x | bash
+    - apt-get -y install --no-install-recommends nodejs
     - npm install --global npx
     - npx jest
     resources:
