--- a/.drone.yml
+++ b/.drone.yml
@@ -101,6 +101,11 @@ steps:
   - name: lighthouse
     image: ubuntu:focal
     commands:
+    - apt-get -y update
+    - apt-get -y install --no-install-recommends ca-certificates curl
+    - curl -sL https://deb.nodesource.com/setup_16.x | bash
+    - apt-get -y install --no-install-recommends nodejs
+    - npm install --global yarn
     - yarn install --frozen-lockfile
     - ./node_modules/.bin/playwright install chrome # Easiest way to install Chrome.
     - yarn global add @lhci/cli@0.8.x
