--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,12 @@
         "prettier"
     ],
     "rules": {
+        "react/no-unknown-property": [
+            2,
+            {
+                "ignore": ["sx"]
+            }
+        ],
         "@typescript-eslint/no-unused-vars": [
             "error",
             { "ignoreRestSiblings": true }
