--- a/.drone.yml
+++ b/.drone.yml
@@ -167,7 +167,7 @@ steps:
     - echo "deb http://ftp.us.debian.org/debian buster main non-free" >> /etc/apt/sources.list.d/fonts.list
     - apt-get -y update
     - apt-get -y install --no-install-recommends ca-certificates curl
-    - curl -sL https://deb.nodesource.com/setup_16.x | bash
+    - curl -sL https://deb.nodesource.com/setup_16.x | bash -
     - apt-get -y install --no-install-recommends nodejs
     - npm install --global yarn
     - yarn install --frozen-lockfile
