--- a/.drone.yml
+++ b/.drone.yml
@@ -174,6 +174,9 @@ steps:
       ACCOUNT_PORTAL_URL: https://account-qa.mongodb.com
       APP_ENV: staging
       HOST_URL: mongodbcom-cdn.staging.corp.mongodb.com
+      NEXTAUTH_URL: http://localhost:3000/developer/api/auth/
+      NEXTAUTH_SECRET:
+        from_secret: NEXTAUTH_SECRET
       NPM_AUTH:
         from_secret: NPM_AUTH
       NPM_EMAIL:
