--- a/.npmrc
+++ b/.npmrc
@@ -2,3 +2,6 @@ registry=https://artifactory.corp.mongodb.com/artifactory/api/npm/npm/
 _auth=${NPM_AUTH}
 email=${NPM_EMAIL}
 always-auth=true
+
+@lg-private:registry=https://artifactory.corp.mongodb.com/artifactory/api/npm/leafygreen-ui/
+//artifactory.corp.mongodb.com/artifactory/api/npm/leafygreen-ui/
