--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
         "@emotion/react": "11.9.0",
         "@emotion/styled": "11.8.1",
         "@leafygreen-ui/leafygreen-provider": "3.1.0",
-        "@leafygreen-ui/mongo-nav": "10.0.1",
+        "@lg-private/mongo-nav": "12.2.0",
         "@mdb/consistent-nav": "1.2.39",
         "@mdb/devcenter-components": "0.2.0",
         "@mdb/flora": "1.5.6",
