--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
         "test": "jest --watch",
         "test:coverage": "jest --coverage",
         "test:e2e": "npx playwright install --with-deps && npx playwright test",
-        "test:e2e:visual": "npx @percy/cli exec -- run test:e2e",
+        "test:e2e:visual": "npx @percy/cli exec -- npm run test:e2e",
         "update-mocks": "tsx ./mocks/update-mocks.ts && tsx ./mocks/update-apollo-mocks.ts"
     },
     "husky": {
