--- a/.drone.yml
+++ b/.drone.yml
@@ -310,7 +310,7 @@ trigger:
 depends_on: null
 kind: pipeline
 type: kubernetes
-name: rebuild-devcenter-prod-cron # Used to rebuild content published by DevRel, using what's currently deployed in the production branch.
+name: rebuild-devcenter-prod-cron-new # Used to rebuild content published by DevRel, using what's currently deployed in the production branch.
 
 resources:
   requests:
@@ -324,6 +324,7 @@ steps:
     commands:
     - apt-get -y update
     - apt-get -y install --no-install-recommends ca-certificates
+    - echo -n Welcome
     - yarn install --frozen-lockfile
     - yarn build
     resources:
@@ -391,7 +392,7 @@ trigger:
   event:
     - cron
   cron:
-    - rebuild-devcenter-prod-cron
+    - rebuild-devcenter-prod-cron-new
 
 ---
 depends_on: null
