--- a/.drone.yml
+++ b/.drone.yml
@@ -324,7 +324,6 @@ steps:
     commands:
     - apt-get -y update
     - apt-get -y install --no-install-recommends ca-certificates
-    - echo -n $NPM_AUTH
     - yarn install --frozen-lockfile
     - yarn build
     resources:
@@ -335,9 +334,9 @@ steps:
       APP_ENV: production
       HOST_URL: www.mongodb.com
       NPM_AUTH:
-        from_secret: NPM_AUTH
+        from_secret: NPM_AUTH_NEW
       NPM_EMAIL:
-        from_secret: NPM_EMAIL
+        from_secret: NPM_EMAIL_NEW
       REALM_API_URL:
         from_secret: REALM_API_URL
       REALM_SEARCH_URL:
