--- a/.drone.yml
+++ b/.drone.yml
@@ -172,7 +172,9 @@ steps:
     - yarn install --frozen-lockfile
     - ./node_modules/.bin/playwright install
     - yarn build:mocked
-    - yarn test:e2e:visual
+    - npx @percy/cli exec:start -v
+    - yarn test:e2e
+    - npx @percy/cli exec:stop -v
     resources:
       limits:
         memory: 18Gi
