--- a/.drone.yml
+++ b/.drone.yml
@@ -165,8 +165,8 @@ steps:
     image: ubuntu:focal
     commands:
     - apt-get -y update
-    - apt-get -y install --no-install-recommends ca-certificates curl libappindicator1 fonts-liberation libnss3-dev libatk-bridge-2.0
-    - curl -sL https://deb.nodesource.com/setup_16.x | bash -
+    - apt-get -y install --no-install-recommends ca-certificates curl libappindicator1 fonts-liberation libnss3-dev
+    - curl -sL https://deb.nodesource.com/setup_18.x | bash -
     - apt-get -y install --no-install-recommends nodejs
     - npm install --global yarn
     - yarn install --frozen-lockfile
