--- a/.drone.yml
+++ b/.drone.yml
@@ -174,7 +174,7 @@ steps:
     - yarn install --frozen-lockfile
     - ./node_modules/.bin/playwright install
     - yarn build:mocked
-    - test:e2e:visual
+    - npx @percy/cli exec -v -- npm run test:e2e
     resources:
       limits:
         memory: 18Gi
