--- a/.drone.yml
+++ b/.drone.yml
@@ -111,7 +111,9 @@ steps:
     - yarn install --frozen-lockfile
     - yarn build
     - yarn global add @lhci/cli@0.8.x
-    - lhci --collect.settings.chromeFlags=--no-sandbox autorun
+    - yarn start
+    - curl http://localhost:3000/developer/
+    # - lhci --collect.settings.chromeFlags=--no-sandbox autorun
     resources:
       limits:
         memory: 18Gi
