--- a/.drone.yml
+++ b/.drone.yml
@@ -105,7 +105,7 @@ steps:
     - apt-get -y install --no-install-recommends ca-certificates curl libappindicator1 fonts-liberation libnss3-dev wget gnupg2
     - echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" | tee -a /etc/apt/sources.list.d/google.list
     - wget -q -O - https://dl.google.com/linux/linux_signing_key.pub | apt-key add -
-    - curl -sL https://deb.nodesource.com/setup_16.x | -E bash -
+    - curl -sL https://deb.nodesource.com/setup_16.x | bash -
     - apt-get update
     - apt-get install -y nodejs google-chrome-stable
     - yarn install --frozen-lockfile
