--- a/.drone.yml
+++ b/.drone.yml
@@ -112,6 +112,7 @@ steps:
     - yarn install --frozen-lockfile
     - yarn build
     - export CHROME_PATH=$(which google-chrome-stable)
+    - export LHCI_BUILD_CONTEXT__CURRENT_BRANCH={$DRONE_BRANCH}
     - yarn global add @lhci/cli@0.12.x
     - lhci autorun
     resources:
