--- a/.drone.yml
+++ b/.drone.yml
@@ -113,11 +113,8 @@ steps:
     - yarn build
     - export CHROME_PATH=$(which google-chrome-stable)
     - export LHCI_BUILD_CONTEXT__CURRENT_BRANCH={$DRONE_BRANCH}
-    - yarn start &
-    - sleep 10
-    - curl http://localhost:3000/developer/
-    # - yarn global add @lhci/cli@0.12.x
-    # - lhci autorun
+    - yarn global add @lhci/cli@0.12.x
+    - lhci autorun
     resources:
       limits:
         memory: 18Gi
