Update sentry org for migration purposes

--- a/sentry.properties
+++ b/sentry.properties
@@ -1,4 +1,4 @@
 defaults.url=https://sentry.io/
-defaults.org=mongodb-inc
+defaults.org=mongodb-org
 defaults.project=devcenter
 cli.executable=node_modules/@sentry/cli/bin/sentry-cli
