--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
         "test": "jest --watch",
         "test:coverage": "jest --coverage",
         "test:e2e": "npx playwright install --with-deps && npx playwright test",
-        "test:e2e:visual": "npx @percy/cli exec -v -- npm run test:e2e",
+        "test:e2e:visual": "npx @percy/cli exec -- npm run test:e2e",
         "update-mocks": "tsx ./mocks/update-mocks.ts && tsx ./mocks/update-apollo-mocks.ts"
     },
     "husky": {
@@ -54,7 +54,7 @@
         "lru-cache": "7.10.1",
         "msw": "1.0.1",
         "next": "12.3.1",
-        "next-auth": "4.23.1",
+        "next-auth": "4.10.3",
         "next-plugin-preval": "1.2.4",
         "next-seo": "5.4.0",
         "next-sitemap": "3.1.21",
@@ -82,7 +82,7 @@
     "devDependencies": {
         "@emotion/babel-plugin": "11.7.2",
         "@next/bundle-analyzer": "12.0.8",
-        "@percy/cli": "1.26.2",
+        "@percy/cli": "1.20.3",
         "@percy/playwright": "1.0.4",
         "@playwright/test": "1.22.2",
         "@testing-library/jest-dom": "5.16.1",
