Testing Slack Integration

--- a/.drone.yml
+++ b/.drone.yml
@@ -1,4 +1,25 @@
 ---
+depends_on: null
+kind: pipeline
+type: kubernetes
+name: test
+
+steps:
+  - name: slack-notification
+    image: plugins/slack
+    settings:
+      channel: devcenter-testing
+      template: '{{repo.name}}-test-{{build.branch}} - #{{build.number}} TESTING SLACK INTEGRATION PRIVATE'
+      webhook:
+        from_secret: SLACK_WEBHOOK
+
+trigger:
+  branch:
+    - DEVHUB-1506
+  event:
+    - push
+
+---
 kind: pipeline
 type: kubernetes
 name: pull-request-checks
