--- a/.drone.yml
+++ b/.drone.yml
@@ -179,7 +179,7 @@ steps:
     - apt-get install -y ./google-chrome-stable_current_amd64.deb
     - yarn install --frozen-lockfile
     - ./node_modules/.bin/playwright install
-    - yarn build:mocked
+    - yarn build
     - npx @percy/cli exec -v -- npm run test:e2e
     resources:
       limits:
