--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
         "next-plugin-preval": "1.2.4",
         "next-seo": "5.4.0",
         "next-sitemap": "3.1.21",
+        "node-mocks-http": "^1.13.0",
         "pino": "8.0.0",
         "pluralize": "8.0.0",
         "polished": "4.1.3",
