--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
         "next-plugin-preval": "1.2.4",
         "next-seo": "5.4.0",
         "next-sitemap": "3.1.21",
-        "node-mocks-http": "^1.13.0",
+        "node-mocks-http": "1.13.0",
         "pino": "8.0.0",
         "pluralize": "8.0.0",
         "polished": "4.1.3",
@@ -79,7 +79,7 @@
         "swr": "1.2.1",
         "theme-ui": "0.13.1",
         "unist-util-visit": "2.0.3",
-        "zod": "^3.22.4"
+        "zod": "3.22.4"
     },
     "devDependencies": {
         "@emotion/babel-plugin": "11.7.2",
