--- a/.drone.yml
+++ b/.drone.yml
@@ -55,6 +55,8 @@ steps:
         from_secret: NEXT_IMAGE_HOSTS
       MONGODB_TV_API_KEY:
         from_secret: MONGODB_TV_API_KEY
+      DRONE_TOKEN:
+        from_secret: drone_token
       DEBIAN_FRONTEND: noninteractive
   - name: unit-tests
     image: ubuntu:focal
